--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Events-Calendar/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Events-Calendar/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T18:52:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ge52DPHzUMMH
-								aqr+u3Ml/A==
+								uETFKtnkJ1+K
+								YjlRF6ErjA==
 								</data>
 								<key>Size</key>
-								<integer>116706</integer>
+								<integer>121504</integer>
 							</dict>
 							<key>files/stacks_page_page60.js</key>
 							<dict>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qKkqPBb89v/0
-								tMxTAecX2Q==
+								4cPOAdIEMc7s
+								TUAyc5Ss8A==
 								</data>
 								<key>Size</key>
-								<integer>54761</integer>
+								<integer>59135</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
