--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/14-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/14-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T18:52:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+3blMExeTwph
-								ukogx+WuyA==
+								chsfI9Ei0QXo
+								1tUBtR1zJA==
 								</data>
 								<key>Size</key>
-								<integer>98419</integer>
+								<integer>106573</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ffKuEzxD42gj
-								tlKl8HPE8w==
+								ctKUMxs+0wFW
+								rk4VSSiEeQ==
 								</data>
 								<key>Size</key>
-								<integer>41904</integer>
+								<integer>48319</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
