--- a/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T19:21:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								14Bo5pski0yM
-								LKDw3M6JSw==
+								0T22U4TI9zZe
+								5TmYmw9CXg==
 								</data>
 								<key>Size</key>
-								<integer>116346</integer>
+								<integer>118764</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								maP/t6uoyeFZ
-								iYFLqOvxUQ==
+								KYlVpOWAGVqc
+								i3DNJSJeqA==
 								</data>
 								<key>Size</key>
-								<integer>49656</integer>
+								<integer>51261</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
