--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -4614,7 +4614,7 @@
 					<key>page45 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T18:52:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4713,11 +4713,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+3blMExeTwph
-								ukogx+WuyA==
+								chsfI9Ei0QXo
+								1tUBtR1zJA==
 								</data>
 								<key>Size</key>
-								<integer>98419</integer>
+								<integer>106573</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -4733,11 +4733,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ffKuEzxD42gj
-								tlKl8HPE8w==
+								ctKUMxs+0wFW
+								rk4VSSiEeQ==
 								</data>
 								<key>Size</key>
-								<integer>41904</integer>
+								<integer>48319</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6484,20 +6484,30 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T19:21:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_525648.png</key>
+							<key>files/backgroundImage_525648.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								S/+NjCX24Lm/
-								r4KlUdrwJg==
+								wLSEDPxm2+Dh
+								xayFdo9MbA==
 								</data>
 								<key>Size</key>
-								<integer>990133</integer>
+								<integer>2504788</integer>
+							</dict>
+							<key>files/small_525701.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								/orr/bg4QftS
+								VAbCzuVb5Q==
+								</data>
+								<key>Size</key>
+								<integer>234406</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -6563,11 +6573,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gq2E2HVQq4Ex
-								7sH7sIqgfA==
+								Q89wZoIk0kLj
+								PezZM/v04g==
 								</data>
 								<key>Size</key>
-								<integer>146789</integer>
+								<integer>156267</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6583,11 +6593,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OEkfwVzk4GnL
-								ax0Dde8pUw==
+								Qmc1JMKM02AF
+								X45RrVUc6Q==
 								</data>
 								<key>Size</key>
-								<integer>58797</integer>
+								<integer>71041</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7894,7 +7904,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T19:21:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7953,11 +7963,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								14Bo5pski0yM
-								LKDw3M6JSw==
+								0T22U4TI9zZe
+								5TmYmw9CXg==
 								</data>
 								<key>Size</key>
-								<integer>116346</integer>
+								<integer>118764</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -7973,11 +7983,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								maP/t6uoyeFZ
-								iYFLqOvxUQ==
+								KYlVpOWAGVqc
+								i3DNJSJeqA==
 								</data>
 								<key>Size</key>
-								<integer>49656</integer>
+								<integer>51261</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7990,7 +8000,7 @@
 					<key>page60 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T18:52:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8099,11 +8109,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ge52DPHzUMMH
-								aqr+u3Ml/A==
+								uETFKtnkJ1+K
+								YjlRF6ErjA==
 								</data>
 								<key>Size</key>
-								<integer>116706</integer>
+								<integer>121504</integer>
 							</dict>
 							<key>files/stacks_page_page60.js</key>
 							<dict>
@@ -8119,11 +8129,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qKkqPBb89v/0
-								tMxTAecX2Q==
+								4cPOAdIEMc7s
+								TUAyc5Ss8A==
 								</data>
 								<key>Size</key>
-								<integer>54761</integer>
+								<integer>59135</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8792,7 +8802,7 @@
 					<key>page68 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T19:21:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8901,11 +8911,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FWAqvVq1+wbB
-								UrzzqrqIhg==
+								wtj1++4cXB1q
+								w1juUB+Kyw==
 								</data>
 								<key>Size</key>
-								<integer>89286</integer>
+								<integer>89287</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9682,7 +9692,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-08T20:16:29Z</date>
+						<date>2018-10-09T19:07:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9731,11 +9741,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iajEs8Vgwz1l
-								apvdy9Ciqg==
+								ke0RA39cFp4b
+								f4smfBKx6g==
 								</data>
 								<key>Size</key>
-								<integer>4448</integer>
+								<integer>4544</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9784,7 +9794,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T19:07:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10927,31 +10937,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
-				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
-				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
-				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC2gOx/
-				W6OAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
-				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
-				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
-				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
-				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
-				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
-				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
-				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
-				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
-				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC2gOx/XjGA
+				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
+				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
+				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
+				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
+				PFdOUy50aW1lI0HAtpuUyZzggAvSPj9AQVokY2xhc3Nu
+				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
+				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
+				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
+				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
+				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
+				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
+				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
+				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
+				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
+				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC2m5TJoA6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
-				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
+				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
+				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -10959,9 +10969,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
-				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
-				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
+				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
+				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
