--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-09T19:21:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FWAqvVq1+wbB
-								UrzzqrqIhg==
+								wtj1++4cXB1q
+								w1juUB+Kyw==
 								</data>
 								<key>Size</key>
-								<integer>89286</integer>
+								<integer>89287</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
